Migrate to Java17.